adds post and updates

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ layout: home
 <br/>
 
 <div class="intro-text">
-<p>Hello, I'm a freelance developer and creative technologist. I've worked with all kinds of organisations, from startups to universities, helping them take their early stage concepts to completion.</p>
+<p>I'm Rory, a freelance developer and creative technologist. I've worked with all kinds of organisations, from startups to universities, helping them take their early stage concepts to completion.</p>
 
-<p>I enjoy sharing and advocating the advantages of digital technology (especially open ones). Away from the glow of the screen, I deliver training on software development, open data, and civic technology.</p>
+<p>I enjoy sharing and advocating the advantages of digital technology (especially open ones). Away from the glow of the screen, I deliver training on software development, open data, and civic tech.</p>
 </div>
 
 <br/>
